# local-area-network-chat-system

./: .gitignore  LICENSE
docs/: README.md  UI参考.md  协议与接口草案.md  开发约定.md  开发路线.md  开发进度.md  数据库与持久化要点.md  服务端跨平台实现.md  架构与代码布局.md
mail-helper/: .env.example  package-lock.json  package.json
mail-helper/src/: server.js
qt-client/: CMakeLists.txt  resources.qrc
qt-client/src/app/: main.cpp
qt-client/src/net/: lan_tcp_client.cpp  lan_tcp_client.h
qt-client/src/style/: app_style.cpp  app_style.h
qt-client/src/ui/: add_friend_search_dialog.cpp  add_friend_search_dialog.h  chat_history_dialog.cpp  chat_history_dialog.h  chat_main_widget.cpp  chat_main_widget.h  contacts_widget.cpp  contacts_widget.h  image_preview_dialog.cpp  image_preview_dialog.h  login_widget.cpp  login_widget.h  mainwindow.cpp  mainwindow.h  network_debug_dialog.cpp  network_debug_dialog.h  profile_dialog.cpp  profile_dialog.h  register_widget.cpp  register_widget.h  sticker_picker_popup.cpp  sticker_picker_popup.h
qt-client/src/utils/: avatar_utils.h  local_profile.cpp  local_profile.h  local_stickers.cpp  local_stickers.h  logger.cpp  logger.h
test/: README.md  lncs_wire.py  perf_file_transfer.py  perf_tcp_load.py  requirements.txt  security_checks.py
vs-server/: CMakeLists.txt  vs-server.sln  vs-server.vcxproj  vs-server.vcxproj.filters
vs-server/include/vsserver/: base64.hpp  database.hpp  file_relay.hpp  logger.hpp  mail_helper_http.hpp  message_parse.hpp  net_compat.hpp  password_hash.hpp  platform_paths.hpp  protocol.hpp  sqlite_dynamic.hpp  tcp_server.hpp  wire.hpp
vs-server/scripts/: fetch-sqlite-dll.ps1
vs-server/src/: main.cpp
vs-server/src/db/: database.cpp  sqlite_dynamic.cpp
vs-server/src/net/: file_relay.cpp  mail_helper_http.cpp  message_parse.cpp  tcp_server.cpp  wire.cpp
vs-server/src/utils/: base64.cpp  logger.cpp  password_hash.cpp  platform_paths.cpp
毕业设计/: 参考文献.md  摘要.md  第1章 绪论.md  第2章 相关技术介绍.md  第3章 系统需求分析.md  第4章 系统设计.md  第5章 系统实现.md  第6章 系统测试.md  结论.md  致谢.md
